revisi response
